# rend3

./: Cargo.toml
examples/animation/: Cargo.toml
examples/cube/: Cargo.toml
examples/cube-no-framework/: Cargo.toml
examples/egui/: Cargo.toml
examples/egui/src/: main.rs
examples/imgui/: Cargo.toml
examples/scene-viewer/: Cargo.toml
examples/skinning/: Cargo.toml
rend3/: Cargo.toml
rend3-egui/: Cargo.toml
rend3-egui/src/: lib.rs
rend3-framework/: Cargo.toml
rend3-framework/src/: lib.rs
rend3-gltf/src/: lib.rs
rend3-imgui/: Cargo.toml
rend3-routine/: Cargo.toml
rend3-routine/shaders/src/: depth.wgsl
rend3-routine/src/common/: samplers.rs
rend3-types/: Cargo.toml
rend3/src/: setup.rs
rend3/src/managers/: texture.rs
rend3/src/util/: mipmap.rs
