[workspace]
resolver = "2"
members = [
    "examples/animation",
    "examples/cube",
    "examples/cube-no-framework",
    # "examples/egui",
    "examples/imgui",
    "examples/scene-viewer",
    "examples/skinning",
    "examples/static-gltf",
    "examples/textured-quad",
    "rend3",
    "rend3-anim",
    "rend3-egui",
    "rend3-framework",
    "rend3-gltf",
    "rend3-imgui",
    "rend3-routine",
    "rend3-types",
]

[profile.ci]
inherits = "dev"
debug = false
incremental = false

[profile.dev-release]
inherits = "dev"

[profile.dev-release.package."*"]
opt-level = 3

[profile.release]
debug = true
# lto = "thin"

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui.git", rev = "3d6a15f442929ae14b942e2d5248f236e7ef9b2f" }
# wgpu = "0.16"
# wgpu-hal = "0.16"
# wgpu-core = "0.16"
# wgpu-types = "0.16"
wgpu = { git = "https://github.com/gents83/wgpu.git", rev = "c6e9de8dd1c938ecf0bf4ee6dd44b75336b8c9f1" }
wgpu-hal = { git = "https://github.com/gents83/wgpu.git", rev = "c6e9de8dd1c938ecf0bf4ee6dd44b75336b8c9f1" }
wgpu-core = { git = "https://github.com/gents83/wgpu.git", rev = "c6e9de8dd1c938ecf0bf4ee6dd44b75336b8c9f1" }
wgpu-types = { git = "https://github.com/gents83/wgpu.git", rev = "c6e9de8dd1c938ecf0bf4ee6dd44b75336b8c9f1" }
# wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "fac4731288117d951d0944d96cf0b00fa006dd6c" }
# wgpu-core = { git = "https://github.com/gfx-rs/wgpu.git", rev = "fac4731288117d951d0944d96cf0b00fa006dd6c" }
# wgpu-hal = { git = "https://github.com/gfx-rs/wgpu.git", rev = "fac4731288117d951d0944d96cf0b00fa006dd6c" }
# wgpu-types = { git = "https://github.com/gfx-rs/wgpu.git", rev = "fac4731288117d951d0944d96cf0b00fa006dd6c" }
# wgpu = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "bda861f77e0ca0b97697850ad19d19a8b8f1cc9c" }
# wgpu-core = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "bda861f77e0ca0b97697850ad19d19a8b8f1cc9c" }
# wgpu-hal = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "bda861f77e0ca0b97697850ad19d19a8b8f1cc9c" }
# wgpu-types = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "bda861f77e0ca0b97697850ad19d19a8b8f1cc9c" }
# wgpu = { path = "../wgpu/wgpu" }
# wgpu-core = { path = "../wgpu/wgpu-core" }
# wgpu-hal = { path = "../wgpu/wgpu-hal" }
# wgpu-types = { path = "../wgpu/wgpu-types" }
