[package]
name = "rend3-egui"
version = "0.3.0"
authors = ["The rend3 Developers"]
edition = "2021"
description = "Egui Render Routine for the rend3 rendering library."
readme = "../README.md"
license = "MIT OR Apache-2.0 OR Zlib"
repository = "https://github.com/BVE-Reborn/rend3"
keywords = ["3d", "graphics", "rend3", "renderer", "egui"]
categories = ["game-development", "graphics", "rendering", "rendering::engine", "wasm"]
rust-version = "1.65"

[dependencies]
# egui = "0.21.0"
egui = { git = "https://github.com/emilk/egui.git", rev = "3d6a15f442929ae14b942e2d5248f236e7ef9b2f" }
# egui-wgpu = "0.21"
egui-wgpu = { git = "https://github.com/emilk/egui.git", rev = "3d6a15f442929ae14b942e2d5248f236e7ef9b2f" }
glam = "0.23"
rend3 = { version = "^0.3.0", path = "../rend3" }
wgpu = "0.16"
wgpu-types = "0.16"