[package]
name = "rend3-imgui"
version = "0.3.0"
authors = ["The rend3 Developers"]
edition = "2021"
description = "Imgui Render Routine for the rend3 rendering library."
readme = "../README.md"
license = "MIT OR Apache-2.0 OR Zlib"
repository = "https://github.com/BVE-Reborn/rend3"
keywords = ["3d", "graphics",  "rend3", "imgui", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine", "wasm"]
rust-version = "1.65"

[dependencies]
imgui = "0.11"
# imgui-wgpu = "0.22"
imgui-wgpu = { git = "https://github.com/Nelarius/imgui-wgpu-rs.git", rev = "1cd675a79a605835c1ea996d68a943cd3c3b4af9" }
glam = "0.23"
rend3 = { version = "^0.3.0", path = "../rend3" }
